@@ -1,3 +1,3 @@
 FHEM Tablet UI last changes:
- 2018-10-08
- - clock: added class check 'localonly'
+ 2018-10-19
+ - svgplot: fixed the src path
